# vibe-coder

./: .gitignore  LICENSE  README.md  README_CN.md  pyproject.toml
config/: default.yaml
patterns/: security.yaml
vibe/: __init__.py  cli.py  config.py  hooks.py  reporter.py  reviewer.py  security.py  testgen.py  watcher.py
