[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vibe-coder"
version = "0.1.0"
description = "Quality guardrails for AI coding — auto code review, test generation, security scanning"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Jaxz714" }]
dependencies = [
    "click>=8.0",
    "httpx>=0.24",
    "pyyaml>=6.0",
    "rich>=13.0",
    "anthropic>=0.20",
]

[project.scripts]
vibe = "vibe.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["vibe"]
